--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ repository               : "NathanOD/nathanod.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile2.jpeg"
   name             : "Nathan Odic"
   pronouns         : # example: "she/her"  
-  bio              : "Master student researching on segmentation."
+  bio              : "Master student"
   location         : "Montréal, QC, Canada"
   employer         : "Polytechnique Montréal"
   uri              : # URL
