--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /files/cv.pdf
+    url: /files/CV_ODIC_Nathan.pdf
     
   # - title: "CV"
   #   url: /cv-json/
