updated after grad 2

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile2.jpeg"
   name             : "Nathan Odic"
   pronouns         : # example: "she/her"  
-  bio              : "Master student"
+  bio              : "M.A.Sc. in Computer Science"
   location         : "Montréal, QC, Canada"
   employer         : "Polytechnique Montréal"
   uri              : # URL
